--- a/src/app/components/registered-users/registered-users.component.html
+++ b/src/app/components/registered-users/registered-users.component.html
@@ -1,1 +1,50 @@
-<p>registered-users works!</p>
+
+  <nz-header> Registered Users</nz-header>
+<nz-content>
+  <div class="send-request">
+    <button
+      nz-button
+      nzType="primary"
+      [disabled]="setOfCheckedId.size === 0"
+      [nzLoading]="loading"
+      (click)="sendRequest()"
+
+    >
+      Send Mail
+    </button>
+
+  </div>
+  <nz-table
+    #rowSelectionTable
+    [nzData]="listOfData"
+    (nzCurrentPageDataChange)="onCurrentPageDataChange($event)"
+    [nzPageIndex]="1" [nzTotal]="5" [nzPageSize]="5" [nzShowTotal]="rangeTemplate"
+  >
+    <thead>
+      <tr>
+        <th [nzChecked]="checked" [nzIndeterminate]="indeterminate" (nzCheckedChange)="onAllChecked($event)"></th>
+        <th [nzSortFn]="true" [nzSortPriority]="true">Full Name</th>
+        <th [nzSortFn]="true" [nzSortPriority]="true">Phone</th>
+        <th [nzSortFn]="true" [nzSortPriority]="true">Email</th>
+        <th [nzSortFn]="true" [nzSortPriority]="true">Status</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let data of rowSelectionTable.data">
+        <td
+          [nzChecked]="setOfCheckedId.has(data.id)"
+          [nzDisabled]="data.disabled"
+          (nzCheckedChange)="onItemChecked(data.id, $event)"
+        ></td>
+        <td>{{ data.name }}</td>
+        <td>{{ data.phone }}</td>
+        <td>{{ data.email }}</td>
+        <td>{{ data.status }}</td>
+      </tr>
+    </tbody>
+
+  </nz-table>
+    <ng-template #rangeTemplate let-range="range" let-total>
+     showing {{ range[0] }} to {{ range[1] }} of {{ total }} entries
+    </ng-template>
+</nz-content>
